trunk/Archive2/3e/9898ba3331df9b/output
main.cpp:11:5: error: no matching function for call to 'foo'
    foo(b);
    ^~~
main.cpp:1:6: note: candidate function not viable: 1st argument ('const long *') would lose const qualifier
void foo(long * a)
     ^
1 error generated.
